force-app/force-app/force-app/main/default/objects/Opportunity/fields/Business_Partner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Territory__c</fullName>
    <label>Business Partner Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>