force-app/force-app/force-app/main/default/objects/Opportunity/fields/Closed_Month_In_number__c.field-meta.xml
<CustomField>
    <fullName>Closed_Month_In_number__c</fullName>
    <formula>MONTH(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Month(In number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>