force-app/force-app/force-app/main/default/objects/Opportunity/fields/Closed_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year__c</fullName>
    <formula>YEAR(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>