force-app/force-app/force-app/main/default/objects/Opportunity/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <label>Closing %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>