force-app/force-app/force-app/main/default/objects/Opportunity/fields/Display_in_System_currency__c.field-meta.xml
<CustomField>
    <fullName>Display_in_System_currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in System currency</label>
    <type>Checkbox</type>
</CustomField>