force-app/force-app/force-app/main/default/objects/Opportunity/fields/Freight_And_Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Freight_And_Other_Charges__c</fullName>
    <formula>SyncedQuote.Freight_INR__c + SyncedQuote.Freight_Tax_Amount__c +  SyncedQuote.Other_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight And Other Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>