force-app/force-app/force-app/main/default/objects/Opportunity/fields/Open_Activities__c.field-meta.xml
<CustomField>
    <fullName>Open_Activities__c</fullName>
    <label>Open Activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>