force-app/force-app/force-app/main/default/objects/Opportunity/fields/Opp_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>OpportunityLineItem.Opp_Product_Total_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>