force-app/force-app/force-app/main/default/objects/Opportunity/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>