force-app/force-app/force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Improved Competitor Performance</fullName>
            </value>
            <value>
                <fullName>Value Addition From Competitor</fullName>
            </value>
            <value>
                <fullName>Fitment</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>