force-app/force-app/force-app/main/default/objects/Opportunity/fields/Support_Information__c.field-meta.xml
<CustomField>
    <fullName>Support_Information__c</fullName>
    <label>Support Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>