force-app/force-app/force-app/main/default/objects/Opportunity/fields/Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Invoiced__c</fullName>
    <label>Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>