force-app/force-app/force-app/main/default/objects/Opportunity/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <label>Total Amount With Discount</label>
    <summarizedField>OpportunityLineItem.Taxable_Value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>