force-app/force-app/force-app/main/default/objects/Opportunity/fields/Who_We_Lost__c.field-meta.xml
<CustomField>
    <fullName>Who_We_Lost__c</fullName>
    <label>Who We Lost</label>
    <length>50</length>
    <type>Text</type>
</CustomField>